[gd_scene load_steps=4 format=3 uid="uid://bqxvhxqxqxqxr"]

[ext_resource type="Script" path="res://algorithms/GraphTheory/minimum_spanning_tree/MinimumSpanningTree.gd" id="1_script"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.2, 0.2, 0.2, 1)
metallic = 0.8
roughness = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.2, 0.8, 0.2, 1)
emission_enabled = true
emission = Color(0.2, 0.8, 0.2, 1)
emission_energy = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3"]
albedo_color = Color(0.8, 0.2, 0.2, 1)
emission_enabled = true
emission = Color(0.8, 0.2, 0.2, 1)
emission_energy = 0.3

[node name="MinimumSpanningTree" type="Node3D"]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 20, 0)
light_energy = 1.5

[node name="GraphNodes" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Vertices" type="Node3D" parent="GraphNodes"]

[node name="GraphLabel" type="CSGBox3D" parent="GraphNodes"]
size = Vector3(4, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="AllEdges" type="Node3D" parent="."]

[node name="CandidateEdges" type="Node3D" parent="AllEdges"]

[node name="MSTEdges" type="Node3D" parent="."]

[node name="SpanningEdges" type="Node3D" parent="MSTEdges"]

[node name="AlgorithmEngine" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="EngineCore" type="CSGBox3D" parent="AlgorithmEngine"]
size = Vector3(3, 3, 3)
material_override = SubResource("StandardMaterial3D_2")

[node name="EngineLabel" type="CSGBox3D" parent="AlgorithmEngine"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="AlgorithmMethods" type="Node3D" parent="AlgorithmEngine"]

[node name="KruskalCore" type="CSGSphere3D" parent="AlgorithmEngine/AlgorithmMethods"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="PrimCore" type="CSGSphere3D" parent="AlgorithmEngine/AlgorithmMethods"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="WeightComparison" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)

[node name="ComparisonCore" type="CSGBox3D" parent="WeightComparison"]
size = Vector3(3, 3, 3)
material_override = SubResource("StandardMaterial3D_2")

[node name="ComparisonLabel" type="CSGBox3D" parent="WeightComparison"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="WeightIndicators" type="Node3D" parent="WeightComparison"]

[node name="DataFlow" type="Node3D" parent="."]

[node name="FlowParticles" type="Node3D" parent="DataFlow"]

[node name="MSTMetrics" type="Node3D" parent="."]

[node name="TotalWeightMeter" type="Node3D" parent="MSTMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 8, 0)

[node name="WeightBase" type="CSGBox3D" parent="MSTMetrics/TotalWeightMeter"]
size = Vector3(4, 0.2, 1)
material_override = SubResource("StandardMaterial3D_1")

[node name="WeightIndicator" type="CSGSphere3D" parent="MSTMetrics/TotalWeightMeter"]
radius = 0.3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_2")

[node name="ProgressMeter" type="Node3D" parent="MSTMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 8, 0)

[node name="ProgressBase" type="CSGBox3D" parent="MSTMetrics/ProgressMeter"]
size = Vector3(4, 0.2, 1)
material_override = SubResource("StandardMaterial3D_1")

[node name="ProgressIndicator" type="CSGSphere3D" parent="MSTMetrics/ProgressMeter"]
radius = 0.3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_2")

[node name="Grid" type="Node3D" parent="."]

[node name="GridLines" type="Node3D" parent="Grid"]
